--- a/_posts/2021-01-30-git-test.md
+++ b/_posts/2021-01-30-git-test.md
@@ -3,7 +3,7 @@ layout: post
 title: "커밋테스트!"
 date: 2021-01-30
 excerpt: "테스트"
-image: "/images/test.jpg"
+image: "/images/test.jpeg"
 ---
 
 # Test Markdown
