--- a/_posts/2021-02-04-About-Me.md
+++ b/_posts/2021-02-04-About-Me.md
@@ -3,7 +3,7 @@ layout: post
 title: "About Me"
 date: 2021-02-04
 excerpt: "cat3ars"
-image: "/images/cat3ars.jpeg"
+image: "/images/cat3ars.jpg"
 ---
 
 ---
